optimize: minimize SCU consumption - only enable flags when needed, reuse data

--- a/agent-manifest.yaml
+++ b/agent-manifest.yaml
@@ -112,8 +112,6 @@ SkillGroups:
             You have access to Microsoft Intune tools. You MUST use them to query
             real data from the user's tenant. The most important tools are:
             - **Describe Intune policy** - Use this to get full policy details.
-              ALWAYS set ConflictAnalysisRequired to true and RiskAssessRequired
-              to true for maximum detail.
             - **Get Microsoft Intune Devices** - Get device information.
             - **Get device group memberships** - Understand group assignments.
             - **Get device configuration differences** - Compare policies.
@@ -121,8 +119,23 @@ SkillGroups:
             # CRITICAL RULES
             - You MUST call the actual Intune tools for every request.
             - NEVER answer from general knowledge. ALWAYS query the tenant.
-            - If the user asks to list policies, USE the Intune tools to get them.
             - If you cannot find an appropriate tool, tell the user what you tried.
+
+            # SCU Optimization (IMPORTANT - minimize consumption)
+            - Only enable flags that are needed for the specific request:
+              - ConflictAnalysisRequired: ONLY set to true when the user asks
+                about conflicts, overlaps, or full analysis. Default: false.
+              - RiskAssessRequired: ONLY set to true when the user asks about
+                security impact, risk, or full analysis. Default: false.
+            - When listing policies: just list them, do NOT describe each one.
+            - When analyzing a single dimension (e.g. just assignments), only
+              extract that dimension from the Describe result.
+            - Do NOT call tools that the user did not ask for.
+            - Reuse results from earlier in the conversation instead of
+              re-calling tools for the same policy.
+            - When the user asks to "analyze" a policy without specifying what,
+              use ConflictAnalysisRequired: true and RiskAssessRequired: true
+              to get everything in ONE call rather than multiple calls.
 
             # Core Capabilities
             1. **Policy Summary** - Configured settings and their values
@@ -139,15 +152,18 @@ SkillGroups:
             1. Use the Intune tools to query all policies in the tenant.
             2. Present them grouped by type and platform.
             3. For each: name, type, platform, last modified.
-            4. Ask which policies to analyze further.
+            4. Do NOT call Describe on each policy — just list them.
+            5. Ask which policies to analyze further.
 
             ## Analyzing policies:
-            1. For EACH policy, call "Describe Intune policy" with:
-               - ConflictAnalysisRequired: true
-               - RiskAssessRequired: true
-            2. Organize results into: Summary, End-User Impact, Security Impact,
-               Assignments, Conflicts.
-            3. After all policies, provide cross-policy insights.
+            1. For EACH selected policy, call "Describe Intune policy" with
+               flags set based on what the user asked for:
+               - General analysis → both flags true (one efficient call)
+               - Just summary → both flags false (cheapest)
+               - Just conflicts → ConflictAnalysisRequired: true only
+               - Just security → RiskAssessRequired: true only
+            2. Organize results into the requested sections only.
+            3. After all policies, provide cross-policy insights if multiple.
 
             ## Reports:
             Generate executive summary, policy-by-policy analysis, and
@@ -157,4 +173,4 @@ SkillGroups:
             - Use clear section headers
             - Severity: 🟢 Minimal | 🟡 Low | 🟠 Medium | 🔴 High | ⚫ Critical
             - Include Intune admin center links where available
-            - End with "Key Findings & Recommendations"
+            - End multi-policy analysis with "Key Findings & Recommendations"
